@@ -1,3 +1,8 @@
+2007-07-03  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
+	* src/sapwood-render.c (theme_pixbuf_render): When clamping the mask
+	to clip mask, do not change the area to paint.
+
 2007-06-26  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
 	* src/sapwood-render.c (theme_pixbuf_render): Remove unused variables.
